# deltaNote

./: .gitignore  LICENSE  README.md
GeniusNote1.0_Server/: CMakeLists.txt  ServerSocetTest.cpp  ServerSqliteTest.cpp  main.cpp  test.c
GeniusNote1.0_Server/include/: Log.h  SocketServer.h  SqliteServer.h  ThreadServer.h
GeniusNote1.0_Server/lib/: sqlite3
GeniusNote1.0_Server/source/: SocketServer.cpp  SqliteServer.cpp  ThreadServer.cpp
GeniusNote1.0_Server/test/: ServerSocetTest.cpp  ServerSqliteTest.cpp  cJSON.c  main.cpp
deltaNote-linux-server/: CMakeLists.txt
deltaNote-linux-server/data/: deltaNoteServerDB
deltaNote-linux-server/include/: Log.h  pack.h  socket.h  sqlite.h  untils.h
deltaNote-linux-server/src/: deltaNote.cpp  socket.cpp  sqlite.cpp  untils.cpp
deltaNote-server/: CMakeLists.txt
deltaNote-server/include/common/: Log.h  blackList.h  blacklist.h  socket.h  sqlite.h  untils.h
deltaNote-server/include/deltaNote/: connectCtrl.h  packCtrl.h  sqliteCtrl.h
deltaNote-server/include/logCtrl/: logManage.h
deltaNote-server/include/sqliteTools/: cmdProcess.h  sqliteCtrl.h
deltaNote-server/src/common/: blackList.cpp  blacklist.cpp  socket.cpp  sqlite.cpp  untils.cpp
deltaNote-server/src/deltaNote/: connectCtrl.cpp  deltaNote.cpp  packCtrl.cpp  sqliteCtrl.cpp
deltaNote-server/src/logCtrl/: logCtrl.cpp  logManage.cpp
deltaNote-server/src/sqliteTools/: cmdProcess.cpp  sqliteCtrl.cpp  sqliteTools.cpp
deltaNote-server/test/: socketTest.c
deltaNote_client/: CMakeLists.txt  deltaNote_client.pro  deltaNote_client_linux.pro  deltaNote_client_window.pro  graphicscolorsvgitem.h  log.h  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newuser.cpp  newuser.h  newuser.ui  pack.h  socket.cpp  socket.h  sqlite.cpp  sqlite.h  todolistitem.cpp  todolistitem.h  todolistitem.ui  untils.cpp  untils.h  userinfo.cpp  userinfo.h  userinfo.ui
deltaNote_client/include/common/: language.h  socket.h  sqlite.h  untils.h
deltaNote_client/include/deltaNote/: connectctrl.h  datactrl.h  listCtrl.h  packCtrl.h
deltaNote_client/include/ui/: checkupdate.h  notify.h  todolistitem.h
deltaNote_client/source/common/: socket.cpp  sqlite.cpp  untils.cpp
deltaNote_client/source/deltaNote/: connectctrl.cpp  datactrl.cpp  listCtrl.cpp  main.cpp  packCtrl.cpp
deltaNote_client/source/ui/: checkupdate.cpp  choosecolor.cpp  login.cpp  mainwindow.cpp  newuser.cpp  notify.cpp  todolistitem.cpp
deltaNote_client/source/widget/: todolistwidget.cpp
deltaNote_client/src/common/: graphicscolorsvgitem.cpp  graphicscolorsvgitem.h  socket.cpp  socket.h  sqlite.cpp  sqlite.h
deltaNote_client/src/deltaNote/: connectctrl.cpp  datactrl.cpp  listCtrl.cpp  listCtrl.h  main.cpp  packCtrl.cpp  packCtrl.h
deltaNote_client/src/log/: log.h  logCtrl.cpp  logCtrl.h  logManage.cpp  logManage.h
deltaNote_client/src/ui/: checkupdate.cpp  checkupdate.h  choosecolor.h  login.cpp  login.h  mainwindow.cpp  mainwindow.h  newuser.h  notify.cpp  notify.h  todolistitem.cpp
deltaNote_client/src/widget/: todolistwidget.cpp
deltaNote_client/ui/: checkupdate.ui  deltaNote_client_resource.rc  login.ui  newuser.ui  notify.ui
deltaNote_client_new/: CMakeLists.txt  README.md  deltaNote_client_window.pro
deltaNote_client_new/client/logic/: c_data_ctrl.cpp  c_data_ctrl.h  c_sync_data.cpp  c_sync_data.h  main.cpp  reminder.cpp  reminder.h  setting_ctrl.cpp  setting_ctrl.h
deltaNote_client_new/client/ui/: icon.qrc
deltaNote_client_new/client/ui/info/: checkupdate.ui  notify.cpp  notify.h  notify.ui
deltaNote_client_new/client/ui/main/: mainwindow.cpp  mainwindow.h  todo_detail.cpp  todo_detail.h  todo_detail.ui  todolistitem.cpp  todolistitem.h  todolistitem.ui  todolistwidget.h  ui_mainwindow.h  ui_todo_detail.h  ui_todolistitem.h
deltaNote_client_new/client/ui/setting/: choosecolor.h  login.cpp  login.h  login.ui  newuser.cpp  newuser.h  ui_choosecolor.h  ui_login.h  ui_newuser.h
deltaNote_client_new/client/ui/utils/: svg_color.h
deltaNote_client_new/client/utils/: c_inter_var.cpp  c_inter_var.h  c_language.h
deltaNote_client_new/del/: logCtrl.cpp  logManage.cpp  logManage.h
deltaNote_client_new/http/: http.cpp  http.h
deltaNote_client_new/http/sample/: create_user_client.json  get_update_client.json  put_data_server.json
deltaNote_client_new/lib_runtime/: log.properties
deltaNote_client_new/log/: log.h
deltaNote_client_new/server/logic/: main.cpp  s_data_ctrl.cpp  s_data_ctrl.h  s_sync_data.cpp  s_sync_data.h  s_user_ctrl.cpp  s_user_ctrl.h
deltaNote_client_new/sqlite/: sql_base.cpp  sql_base.h  sql_key_value.cpp  sql_key_value.h  sql_todo_list.cpp  sql_todo_list.h  sql_user.cpp  sql_user.h
deltaNote_client_new/src/common/: inter_var.cpp  inter_var.h  socket.cpp  socket.h  untils.h
deltaNote_client_new/src/deltaNote/: connectctrl.cpp  connectctrl.h  data_ctrl.cpp  data_ctrl.h  datactrl.cpp  datactrl.h  listCtrl.cpp  main.cpp  packCtrl.cpp  setting_ctrl.cpp  setting_ctrl.h  sync_data.cpp  sync_data.h
deltaNote_client_new/src/log/: log.h
deltaNote_client_new/src/logic/: data_ctrl.cpp  data_ctrl.h  main.cpp  setting_ctrl.cpp  setting_ctrl.h  sync_data.cpp  sync_data.h
deltaNote_client_new/src/network/: network.cpp  network.h
deltaNote_client_new/src/network/sample/: create_user_server.json  get_data_server.json  (+3 more)
deltaNote_client_new/src/sqlite/: sql_base.cpp  sql_base.h  sql_setting.cpp  sql_setting.h  sql_todo_list.cpp  sql_todo_list.h  sqlite.cpp  sqlite.h
deltaNote_client_new/src/ui/: checkupdate.cpp  checkupdate.h  checkupdate.ui  deltaNote_client_resource.rc  login.cpp  mainwindow.cpp  mainwindow.h  newuser.cpp  notify.cpp  ui_mainwindow.h  ui_notify.h
deltaNote_client_new/src/utils/: inter_var.cpp  inter_var.h  svg_color.cpp
deltaNote_client_new/src/widget/: todolistwidget.cpp  todolistwidget.h
deltaNote_client_new/test/: sql_test.cpp
deltaNote_client_new/ui/: choosecolor.ui  deltaNote_client_resource.rc  mainwindow.ui  todolistitem.ui  ui_todolistitem.h
deltaNote_client_new/utils/: inter_var.cpp  inter_var.h
(+173 files in other folders)
